versions/v2.16/modules/de/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
= Über Bereitstellungstreiber
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-08-26
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/index.adoc 
:product-path: rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
ifeval::["{build-type}" != "community"]
:xref-harvester-overview: xref:integrations/harvester/overview.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-hosted-k8s-clusters: xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
:xref-infra-aws: xref:cluster-deployment/infra-providers/aws/aws.adoc
:xref-deploy-gke: xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc
:xref-deploy-eks: xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc
:xref-deploy-aks: xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc
:xref-infra-gce: xref:cluster-deployment/infra-providers/gce/gce.adoc
:xref-infra-azure: xref:cluster-deployment/infra-providers/azure/azure.adoc
:xref-infra-digitalocean: xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
:xref-infra-vsphere: xref:cluster-deployment/infra-providers/vsphere/vsphere.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-hosted-k8s-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc
:xref-infra-aws: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-amazon-ec2-cluster.adoc
:xref-deploy-gke: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/gke.adoc
:xref-deploy-eks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/eks.adoc
:xref-deploy-aks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/aks.adoc
:xref-infra-gce: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-a-google-compute-engine-cluster.adoc
:xref-infra-azure: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-azure-cluster.adoc
:xref-infra-digitalocean: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-a-digitalocean-cluster.adoc
:xref-infra-vsphere: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/vsphere/index.adoc
endif::[]

Treiber in Rancher ermöglichen es Ihnen zu verwalten, welche Anbieter verwendet werden können, um {xref-hosted-k8s-clusters}[gehostete Kubernetes-Cluster] oder {xref-infra-providers}[Knoten in einem Infrastruktur-Anbieter] bereitzustellen, damit Rancher Kubernetes bereitstellen und verwalten kann.

[#_rancher_drivers]
== Rancher-Treiber

Mit Rancher-Treibern können Sie vorhandene integrierte Treiber aktivieren/deaktivieren, die in Rancher enthalten sind. Alternativ können Sie Ihren eigenen Treiber hinzufügen, wenn Rancher ihn noch nicht implementiert hat.

Es gibt zwei Arten von Treibern innerhalb von Rancher:

* <<_cluster_drivers,Cluster-Treiber>>
* <<_node_drivers,Knoten-Treiber>>

[#_cluster_drivers]
== Cluster-Treiber

Clustertreiber werden verwendet, um {xref-hosted-k8s-clusters}[gehostete Kubernetes-Cluster] bereitzustellen, wie GKE, EKS, AKS usw. Welche Clustertreiber beim Erstellen eines Clusters angezeigt werden, richtet sich nach dem Status des jeweiligen Clustertreibers. Nur `active` Clustertreiber werden als Option zum Erstellen von Clustern für gehostete Kubernetes-Cluster angezeigt. Standardmäßig wird Rancher mit mehreren vorhandenen Clustertreibern ausgeliefert, aber Sie können auch benutzerdefinierte Clustertreiber erstellen, um sie zu Rancher hinzuzufügen.

Standardmäßig hat Rancher mehrere gehostete Kubernetes-Cloud-Anbieter aktiviert, darunter:

* {xref-deploy-eks}[Amazon EKS]
* {xref-deploy-gke}[Google GKE]
* {xref-deploy-aks}[Azure AKS]

[#_node_drivers]
== Knoten-Treiber

Knoten-Treiber werden verwendet, um Hosts bereitzustellen, die Rancher zum Starten und Verwalten von Kubernetes-Clustern nutzt. Ein Knoten-Treiber ist dasselbe wie ein https://github.com/docker/docs/blob/vnext-engine/machine/drivers/index.md[Docker Machine-Treiber]. Die Verfügbarkeit des anzuzeigenden Knotentreibers beim Erstellen von Knoten-Vorlagen wird basierend auf dem Status des Knotentreibers definiert. Nur `active` Knotentreiber werden als Option zum Erstellen von Knoten-Vorlagen angezeigt. Standardmäßig wird Rancher mit vielen vorhandenen Docker Machine-Treibern ausgeliefert, aber Sie können auch benutzerdefinierte Knotentreiber erstellen, um sie zu Rancher hinzuzufügen.

Wenn es bestimmte Knotentreiber gibt, die Sie Ihren Benutzern nicht anzeigen möchten, müssen Sie diese Knotentreiber deaktivieren.

Rancher unterstützt mehrere große Cloud-Anbieter, aber standardmäßig sind diese Knotentreiber aktiv und für die Implementierung verfügbar:

* {xref-infra-aws}[Amazon EC2]
* {xref-infra-azure}[Azure]
* {xref-infra-digitalocean}[Digital Ocean]
* {xref-infra-vsphere}[vSphere]

Es gibt mehrere andere Knotentreiber, die standardmäßig deaktiviert sind, aber in Rancher enthalten sind:

* {xref-harvester-overview}#_harvester_node_driver/[{harvester-product-name}], verfügbar ab Rancher v2.6.1
* {xref-infra-gce}[Google GCE], verfügbar ab Rancher v2.12.0
